<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY app_name "Babel">]>

<resources>
    <!--Application Info-->
    <string name="app_name">&app_name;</string>
    <string name="app_name_long">Project &app_name;</string>
    <string name="app_purpose">Android Mobile Programming Final Assignment</string>
    <string-array name="developer_names">
        <item>William Darian</item>
        <item>Jonathan Kennard</item>
        <item>Ign. Fajar Prasetya</item>
    </string-array>
    <string-array name="developer_nim">
        <item>000 000 10691</item>
        <item>000 000 11280</item>
        <item>000 000 08457</item>
    </string-array>
    <string-array name="credits">
        <item>https://icons8.com</item>
        <item>https://google.github.io/material-design-icons/#icons-for-android</item>
    </string-array>

    <!--Preference Settings-->
    <string-array name="global_stock_precision_selection">
        <item>0.#</item>
        <item>0.##</item>
        <item>0.###</item>
        <item>0.####</item>
        <item>0.#####</item>
    </string-array>
    <string-array name="in_out_incoming_max_selection">
        <item>99</item>
        <item>999</item>
        <item>9999</item>
        <item>99999</item>
        <item>999999</item>
    </string-array>

    <!-- Login Activity -->
    <string name="activity_login_label">Sign In | &app_name;</string>
    <string name="text_welcome"><big><b>Welcome to &app_name;!</b></big>\n<i>Use your &app_name;
        account to continue</i></string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_remember_me">Remember me</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_credentials">Incorrect login credentials</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="menu_settings">Settings</string>

    <!--Main Activity-->
    <string name="tab_manage">Manage</string>
    <string name="tab_in_out">In/Out</string>
    <string name="tab_report">Report</string>
    <string name="tab_user">User</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_about">About</string>

    <!--Manage Fragment-->
    <string name="manage_prompt_search_items">Search</string>
    <string name="bottom_dialog_new_item">Item</string>
    <string name="bottom_dialog_manage_units">Units</string>
    <string name="bottom_dialog_manage_locations">Locations</string>
    <string name="bottom_dialog_manage_third_parties">3rd Pty</string>

    <!--In Out Fragment-->
    <string name="bottom_dialog_in_out_incoming">Incoming</string>
    <string name="bottom_dialog_in_out_outgoing">Outgoing</string>
    <string name="bottom_dialog_in_out_add_item">Add</string>
    <string name="bottom_dialog_in_out_commit">Commit</string>

    <!--Report Fragment-->
    <string name="report_company_head">Company Information</string>
    <string name="report_company_name">Company name:</string>
    <string name="report_company_status">Company status:</string>
    <string name="report_company_site">Company website:</string>
    <string name="report_company_main_office">Company main office:</string>
    <string name="report_company_secondary_office">Company secondary office:</string>
    <string name="report_item_head">Item Report</string>
    <string name="report_item_item_num">Number of items:</string>
    <string name="report_item_item_shortage">Number of shortage items:</string>
    <string name="report_item_item_storage">Storage summary:</string>
    <string name="report_unit_head">Units</string>
    <string name="report_unit_measure_num">Number of measures:</string>
    <string name="report_unit_unit_num">Number of units:</string>
    <string name="report_user_head">Users</string>
    <string name="report_user_user_num">Number of users:</string>
    <string name="bottom_dialog_report_edit_company">Edit</string>
    <string name="bottom_dialog_report_track_incoming">Track In</string>
    <string name="bottom_dialog_report_track_outgoing">Track Out</string>
    <string name="bottom_dialog_report_out_of_stock">OOS</string>

    <!--User Fragment-->
    <string name="user_label_dob">Date of birth:</string>
    <string name="user_label_reg_date">Registered since:</string>
    <string name="user_label_last_login">Last login:</string>
    <string name="user_other_user_head">Other Users</string>
    <string name="bottom_dialog_user_new_user">New</string>
    <string name="bottom_dialog_user_settings">Settings</string>
    <string name="bottom_dialog_user_logout">Logout</string>
    <string name="bottom_dialog_user_quit">Quit</string>

    <!--Change Password Dialog-->
    <string name="password_title">Change Password</string>
    <string name="password_prompt_current_password">Current Password</string>
    <string name="password_prompt_new_password">New Password</string>
    <string name="password_prompt_confirm_new_password">Confirm New Password</string>
    <string name="password_action_cancel">Cancel</string>
    <string name="password_action_change_password">Change Password</string>
    <string name="password_error_password_incorrect">Password is incorrect</string>
    <string name="password_error_password_minimum_length">Password must at least contain 8 characters</string>
    <string name="password_error_password_mismatch">New password did not match</string>

    <!--Thumbnail Dialog-->
    <string name="thumbnail_title">Select Thumbnail</string>

    <!--Track Activity-->
    <string name="track_separator">-</string>

    <!--About Activity-->
    <string name="about_developers">Developers:</string>
    <string name="about_credits">Made Possible by:</string>

    <!--Dialog-->
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_new">New</string>
    <string name="action_show_inactive">Show Inactive</string>

    <!--Placeholders-->
    <string name="item_name">&lt;ITEM NAME&gt;</string>
    <string name="item_stock">&lt;ITEM STOCK&gt;</string>
    <string name="item_location">&lt;ITEM LOCATION&gt;</string>
    <string name="report_placeholder">&lt;REPORT PLACEHOLDER&gt;</string>
    <string name="track_start_date">&lt;START DATE&gt;</string>
    <string name="track_end_date">&lt;END DATE&gt;</string>
    <string name="track_activity_date">&lt;ACTIVITY DATE&gt;</string>
    <string name="track_activity_location">&lt;ACTIVITY LOCATION&gt;</string>
    <string name="track_activity_purpose">&lt;ACTIVITY PURPOSE&gt;</string>
    <string name="track_activity_accountable">&lt;ACTIVITY ACCOUNTABLE&gt;</string>
    <string name="user_name">&lt;USERNAME&gt;</string>
    <string name="user_email">&lt;EMAIL&gt;</string>
    <string name="user_role">&lt;ROLE&gt;</string>
    <string name="user_dob">&lt;DOB&gt;</string>
    <string name="user_reg_date">&lt;REGISTER DATE&gt;</string>
    <string name="user_last_login">&lt;LAST LOGIN&gt;</string>
    <string name="dialog_heading">&lt;DIALOG HEADING&gt;</string>
    <string name="dialog_message">&lt;DIALOG MESSAGE&gt;</string>
</resources>
