<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:paddingVertical="@dimen/activity_vertical_margin">
        <TableRow>
            <TextView
                android:id="@+id/activity_login_tv_welcome"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/text_welcome"
                android:maxLines="2"/>
        </TableRow>
        <TableRow>
            <android.support.design.widget.TextInputLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/activity_login_et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/activity_login_tv_email_errors"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#ffbaba"
                android:textColor="#ff0000"
                android:visibility="gone"
                android:text="@string/error_invalid_email"/>
        </TableRow>
        <TableRow>
            <android.support.design.widget.TextInputLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/activity_login_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/activity_login_tv_password_errors"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#ffbaba"
                android:textColor="#ff0000"
                android:visibility="gone"
                android:text="@string/error_invalid_password"/>
        </TableRow>
        <TableRow>
            <CheckBox
                android:id="@+id/activity_login_chk_remember"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_remember_me"/>
        </TableRow>
        <TableRow>
            <Space
                android:layout_weight="2"
                android:layout_width="0dp"/>
            <Button
                android:id="@+id/activity_login_btn_sign_in"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="@string/action_sign_in"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/activity_login_tv_credentials_errors"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#ffbaba"
                android:textColor="#ff0000"
                android:visibility="gone"
                android:text="@string/error_incorrect_credentials"/>
        </TableRow>
    </TableLayout>


</android.support.constraint.ConstraintLayout>