<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserFragment">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icons8_user_96"/>
            <TableLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:id="@+id/fragment_user_tv_name"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name"
                        android:textSize="36sp"
                        android:textColor="@android:color/black"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/fragment_user_tv_email"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/user_email"
                        android:textSize="14sp"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:id="@+id/fragment_user_tv_role"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/user_role"
                        android:textSize="18sp"
                        android:textColor="@android:color/black"/>
                </TableRow>
                <TableRow>
                    <TableLayout
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">
                        <TableRow>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/user_label_dob" />
                            <TextView
                                android:id="@+id/fragment_user_tv_dob_date"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/user_dob"
                                android:textSize="14sp"
                                android:paddingStart="5dp"
                                android:paddingEnd="5dp"/>
                        </TableRow>
                        <TableRow>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/user_label_reg_date"/>
                            <TextView
                                android:id="@+id/fragment_user_tv_reg_date"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/user_reg_date"
                                android:textSize="14sp"
                                android:paddingStart="5dp"
                                android:paddingEnd="5dp"/>
                        </TableRow>
                        <TableRow>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/user_label_last_login"/>
                            <TextView
                                android:id="@+id/fragment_user_tv_last_login"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:text="@string/user_last_login"
                                android:textSize="14sp"
                                android:paddingStart="5dp"
                                android:paddingEnd="5dp"/>
                        </TableRow>
                    </TableLayout>
                </TableRow>
            </TableLayout>
        </TableRow>
        <TableRow
            android:paddingStart="5dp"
            android:paddingEnd="5dp">
            <Button
                android:id="@+id/fragment_user_btn_change_password"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@color/colorAccent"
                android:text="@string/password_action_change_password"/>
        </TableRow>
        <TableRow
            android:id="@+id/fragment_user_tr">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/icons8_user_account_24"
                android:tint="@android:color/darker_gray"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/user_other_user_head"/>
        </TableRow>
        <TableRow>
            <View
                android:id="@+id/fragment_user_view"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>
        </TableRow>
        <TableRow>
            <ListView
                android:id="@+id/fragment_user_lv_other_users"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>
</FrameLayout>