<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <TableRow>
            <TextView
                android:id="@+id/dialog_yes_no_tv_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textSize="22sp"
                android:textColor="@android:color/black"
                android:text="@string/dialog_heading"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/dialog_yes_no_tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:textColor="@android:color/black"
                android:text="@string/dialog_message"/>
        </TableRow>
        <TableRow>
            <View
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
            <Button
                android:id="@+id/dialog_yes_no_btn_yes"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@color/colorAccent"
                android:text="@string/action_yes" />
            <Button
                android:id="@+id/dialog_yes_no_btn_no"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:textColor="@color/colorAccent"
                android:text="@string/action_no" />
        </TableRow>
    </TableLayout>

</RelativeLayout>