<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">
    <TableRow>
        <Button
            android:id="@+id/modal_main_in_out_btn_incoming"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:text="@string/bottom_dialog_in_out_incoming"
            android:drawableTop="@drawable/icons8_down_3_24"
            android:drawableTint="@color/colorAccent"/>
        <Button
            android:id="@+id/modal_main_in_out_btn_outgoing"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:text="@string/bottom_dialog_in_out_outgoing"
            android:drawableTop="@drawable/icons8_up_2_24"
            android:drawableTint="@color/colorAccent"/>
        <Button
            android:id="@+id/modal_main_in_out_btn_add_item"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:text="@string/bottom_dialog_in_out_add_item"
            android:drawableTop="@drawable/icons8_add_list_24"
            android:drawableTint="@color/colorAccent"/>
        <Button
            android:id="@+id/modal_main_in_out_btn_commit"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:text="@string/bottom_dialog_in_out_commit"
            android:drawableTop="@drawable/icons8_inspection_24"
            android:drawableTint="@color/colorAccent"/>
    </TableRow>
</TableLayout>