<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">
    <TableRow>
        <Button
            android:id="@+id/modal_main_report_btn_edit_company"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:text="@string/bottom_dialog_report_edit_company"
            android:drawableTop="@drawable/icons8_office_24"
            android:drawableTint="@color/colorAccent"/>
        <Button
            android:id="@+id/modal_main_report_btn_track_incoming"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:text="@string/bottom_dialog_report_track_incoming"
            android:drawableTop="@drawable/icons8_down_button_24"
            android:drawableTint="@color/colorAccent"/>
        <Button
            android:id="@+id/modal_main_report_btn_track_outgoing"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:text="@string/bottom_dialog_report_track_outgoing"
            android:drawableTop="@drawable/icons8_slide_up_24"
            android:drawableTint="@color/colorAccent"/>
        <Button
            android:id="@+id/modal_main_report_btn_out_of_stock"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:textColor="@color/colorAccent"
            android:text="@string/bottom_dialog_report_out_of_stock"
            android:drawableTop="@drawable/icons8_error_24"
            android:drawableTint="@color/colorAccent"/>
    </TableRow>
</TableLayout>