<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow>
            <android.support.design.widget.TabLayout
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <android.support.design.widget.TabItem
                    android:id="@+id/activity_main_ti_manage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_manage"
                    android:icon="@drawable/icons8_box_24"/>
                <android.support.design.widget.TabItem
                    android:id="@+id/activity_main_ti_in_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_in_out"
                    android:icon="@drawable/icons8_trolley_24"/>
                <android.support.design.widget.TabItem
                    android:id="@+id/activity_main_ti_report"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_report"
                    android:icon="@drawable/icons8_combo_chart_24"/>
                <android.support.design.widget.TabItem
                    android:id="@+id/activity_main_ti_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab_user"
                    android:icon="@drawable/icons8_user_account_24"/>
            </android.support.design.widget.TabLayout>
        </TableRow>
        <TableRow>
            <FrameLayout
                android:id="@+id/activity_main_fl_frame"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>