<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrackActivity">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <TableRow>
            <TextView
                android:id="@+id/activity_track_tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TITLE"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Location"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Purpose"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"/>
        </TableRow>
        <TableRow>
            <Spinner
                android:id="@+id/activity_track_spn_location"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/activity_track_spn_third_party"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/activity_track_tv_start_date"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/track_start_date"
                android:textAlignment="viewEnd"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/track_separator"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"/>
            <TextView
                android:id="@+id/activity_track_tv_end_date"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/track_end_date"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>
        </TableRow>
        <TableRow>
            <ScrollView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/activity_track_rv_activities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </ScrollView>
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>